fix bug with overflow

--- a/css/util.css
+++ b/css/util.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   height: 100%;
   display: block;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 .hidden {
